--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,29 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 SQLAlchemy==1.3.21
 Werkzeug==1.0.1
+
+datetime~=4.3
+pip~=20.1.1
+zlib~=1.2.11
+wheel~=0.34.2
+openssl~=1.1.1i
+cryptography~=2.9.2
+py~=1.9.0
+lxml~=4.5.2
+keyring~=21.2.1
+typing_extensions~=3.7.4.2
+colorama~=0.4.3
+pkginfo~=1.5.0.1
+gevent~=20.6.2
+tornado~=6.0.4
+greenlet~=0.4.16
+setuptools~=49.2.0
+cython~=0.29.21
+future~=0.18.2
+docutils~=0.16
+attrs~=19.3.0
+pytest~=5.4.3
+mock~=4.0.2
+pyodbc~=4.0.30
+psycopg2~=2.8.6
+pandas~=1.0.5
